--- a/yolo-test/Cargo.toml
+++ b/yolo-test/Cargo.toml
@@ -4,8 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+base64 = "0.20"
 image = "0.24.6"
 ndarray = "0.15.6"
 ort = "1.15.2"
-tract-core = "0.21.9"
-tract-onnx = "0.21.9"
